--- a/.github/workflows/embed.yml
+++ b/.github/workflows/embed.yml
@@ -11,5 +11,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+          fetch-depth: 0
+          ref: refs/heads/${{ github.head_ref }}
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.10
+      - name: Install dependencies
+        run: |
+          pip install pytest
       - uses: tokusumi/markdown-embed-code@v1.0.0
+        with:
+          markdown: "README.md"
 
