--- a/.github/workflows/embed.yml
+++ b/.github/workflows/embed.yml
@@ -19,10 +19,11 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.10
-      - name: Install dependencies
-        run: |
-          pip install pytest
       - uses: tokusumi/markdown-embed-code@v1.0.0
         with:
           markdown: "README.md"
+          token: ${{ secrets.GITHUB_TOKEN }}
+          message: "Auto commit for embedding"
+          no_change: "No change in README.md"
+          silent: false
 
