add proper cmake installation support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,11 @@ cmake_minimum_required(VERSION 3.20)
 project(c-argparser LANGUAGES C VERSION 0.1.0)
 
 add_library(c-argparser
+    include/arg/arg.h
+    include/arg/gbuf.h
+    include/arg/macro.h
+    include/arg/str.h
+    include/arg/sum.h
     str.c
     arg.c
 )
@@ -12,3 +17,14 @@ set_target_properties(c-argparser PROPERTIES
     C_EXTENSIONS OFF
 )
 target_include_directories(c-argparser PUBLIC include)
+
+install(TARGETS c-argparser
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
+    RUNTIME DESTINATION bin
+)
+
+install(
+    DIRECTORY include
+    DESTINATION .
+)
